# staircase

staircase/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  staircase  staircase.c  staircase1
staircase/.deps/: staircase.Po
staircase/autom4te.cache/: output.1  requests  traces.0  traces.1
