#creating a configure.ac file for staircase problem
# Prelude.
AC_PREREQ([2.59]) # Macro check for the recent version of autoconf
AC_INIT([straircase], [1.0], [check-devel AT lists.sourceforge.net])
AM_PROG_AR

AM_INIT_AUTOMAKE([-Wall -Werror foreign 1.11.2]) # Runs many macros required for proper operation of the generated Makefiles

# Checks for programs.
AC_PROG_CC

# Output files
AC_CONFIG_HEADERS([config.h])

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
